overlay/test/patch-replicacount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
 replicas: 2
