overlay/test/patch-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  template:
    spec:
      containers:
      - name: nginx
        volumeMounts:
        - name: content-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: content-volume
        configMap:
          name: content
